<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/chart_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        tools:context="edu.unm.twin_cities.graphit.fragments.PlotFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight = "0">

            <Button
                android:id="@+id/one_week_preset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_week_label"
                android:background="@drawable/round_square_button"
                android:textSize="12sp"
                android:minHeight="36dp"
                android:onClick="setOneWeekAxisView"/>

            <View
                android:id="@+id/left_vertical_bar"
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#FF0000FF" />

            <Button
                android:id="@+id/one_month_preset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_month_label"
                android:background="@drawable/square_button"
                android:textSize="12sp"
                android:minHeight="36dp"
                android:onClick="setOneMonthAxisView"/>

            <View
                android:id="@+id/right_vertical_bar"
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#FF0000FF" />

            <Button
                android:id="@+id/default_view_preset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_view"
                android:background="@drawable/square_round_button"
                android:textSize="12sp"
                android:minHeight="36dp"
                android:onClick="setFreeAxisView"/>
        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight = "1"/>
</LinearLayout>
